@@ -456,11 +456,11 @@ Soooo... It is you who sent your subordinates to attack us. Now when we've destr
     [event]
         name=start
         [store_locations]
-            x=14
-            y=9
-            radius=10
+            terrain=*^V*
             [and]
-                terrain=*^V*
+                x=14
+                y=9
+                radius=10
             [/and]
             variable=temp_starting_villages_area
         [/store_locations]
@@ -478,11 +478,11 @@ Soooo... It is you who sent your subordinates to attack us. Now when we've destr
     [event]
         name=start
         [store_locations]
-            x=34
-            y=7
-            radius=10
+            terrain=*^V*
             [and]
-                terrain=*^V*
+				x=34
+				y=7
+				radius=10
             [/and]
             variable=temp_starting_villages_area
         [/store_locations]
