@@ -548,14 +548,13 @@ _f,    _f,    _f,    _f,    _f,    _f,    Re,    _f,    _f,    _f,    _f,    _f,
     [store_locations]
         variable=potential_locs
         terrain=Xu
-        [and]
-            terrain=U*
-            radius=1
-        [/and]
-        [and]
-            terrain=Re
-            radius=1
-        [/and]
+        [filter_adjacent_location]
+            terrain=U*, Re
+	        [filter_adjacent_location]
+	            terrain=U*, Re
+	            count=4-5
+	        [/filter_adjacent_location]
+        [/filter_adjacent_location]
         [not]
             # don't start near the cave floor around the scepter
             x=$scepter_x
