@@ -304,10 +304,10 @@
         [/store_unit]
 
         [store_locations]
-            x,y=$ethiliel_loc.x,$ethiliel_loc.y
-            radius=3
+            terrain=Gs^Fp
             [and]
-                terrain=Gs^Fp
+                x,y=$ethiliel_loc.x,$ethiliel_loc.y
+                radius=3
             [/and]
             variable=bodyguard_loc
         [/store_locations]
