@@ -3691,12 +3691,11 @@
     # there, if the hex is empty teleport Kaleh there
 
     [store_locations]
-        x={X_LOC}
-        y={Y_LOC}
-        radius=1
-        [and]
-            terrain=Uu, Re, Uu^Vu, Cud, Ke, Uh, Uu^Uf
-        [/and]
+		[filter_adjacent_location]
+			x={X_LOC}
+			y={Y_LOC}
+		[/filter_adjacent_location]
+        terrain=Uu, Re, Uu^Vu, Cud, Ke, Uh, Uu^Uf
         [not]
             [filter]
             [/filter]
@@ -5671,12 +5670,11 @@
                 # find adjacent hex with cave floor or dirt
 
                 [store_locations]
-                    x=$coord_x
-                    y=$coord_y
-                    radius=1
-                    [and]
-                        terrain=Uu, Re, Uu^Vu, Ce, Ke, Ch, Rr, Qxu, Uh, Uu^Uf, Ryd
-                    [/and]
+                    [filter_adjacent_location]
+                        x=$coord_x
+                        y=$coord_y
+                    [/filter_adjacent_location]
+                    terrain=Uu, Re, Uu^Vu, Ce, Ke, Ch, Rr, Qxu, Uh, Uu^Uf, Ryd
                     variable=hex_loc
                 [/store_locations]
 
