@@ -21,6 +21,8 @@ Version 1.3.7+svn:
    * remove the unused [neighbour_unit_filter] animation filter, now that SUF
      does it for us (and better)
    * a minus sign in front of a cardinal direction now reverses it ("-s"="n")
+   * now radius expansion is handled last in Standard Location Filters;
+     previously it was handled last except before [and], [or], and [not]
  * graphics:
    * new graphics for the highwayman
    * no more idle animations for units next to an enemy unit
